Change work detail > work overview, add all overview pages and fix footer on work pages

--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -2,10 +2,10 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Work - Hanis</title>
+    <title>Jubilee Austen - Work Overview</title>
     <meta
       name="description"
-      content="A collection of work by Hanis Noor, a front-end web designer and developer"
+      content="Portfolio of Hanis Noor, a front-end web designer and developer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -47,7 +47,7 @@
       </p>
     <![endif]-->
 
-    <!-- HEADER - WORK -->
+    <!-- HEADER - WORK OVERVIEW -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -69,83 +69,62 @@
       </div>
     </header>
 
-    <!-- MAIN - WORK -->
+    <!-- MAIN - WORK OVERVIEW -->
     <main>
-      <section class="work">
-        <div class="wrapper-container">
-          <h1>Work</h1>
-          <div class="content-wrapper">
-            <a href="nexus-overview.html">
-              <article>
-                <img
-                  src="../img/nexus-preview.png"
-                  alt="desc"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
+      <section class="work-overview">
+        <div class="content-wrapper">
+          <h1>Jubilee Austen</h1>
+          <div
+            class="image-slides-outer"
+            data-aos="zoom-in"
+            data-aos-duration="1200"
+            data-aos-once="true"
+          >
+            <div class="image-slides-inner">
+              <img src="../img/jubilee-austen-preview.png" class="active" />
+            </div>
+          </div>
+          <div
+            class="work-overview-text"
+            data-aos="zoom-in"
+            data-aos-duration="1200"
+            data-aos-once="true"
+            data-aos-anchor="top-top"
+          >
+            <div class="work-overview-sub">
+              <h3>Description</h3>
+              <p>
+                Jubilee Austen is a portfolio for a fictional web developer.
+                HTML and CSS was used to create a static website.
+              </p>
+            </div>
+            <div class="work-overview-sub">
+              <h3>Completed</h3>
+              <p>April 2020</p>
+            </div>
+            <div class="work-overview-sub">
+              <h3>Tech</h3>
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
+            <div class="work-overview-sub">
+              <div class="button-container">
+                <a href="#" class="button" id="button-full-width">Live Demo</a>
+              </div>
+              <div class="button-container">
+                <a href="#" class="button" id="button-full-width"
+                  >Github Code</a
                 >
-                  <h3>Nexus</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Nexus is a fictional space travel website that is coded with
-                    HTML and CSS. It is fully responsive across mobile, tablet
-                    and desktop devices.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="rogue-pickings-overview.html">
-              <article id="article-b" data-aos-delay="300">
-                <img
-                  src="../img/rogue-pickings-preview.png"
-                  alt="desc"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Rogue Pickings</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Rogue Pickings is a website for an imaginary food truck
-                    company. It features a responsive one-page website coded
-                    using HTML and CSS.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="jubilee-austen-overview.html">
-              <article data-aos-delay="500">
-                <img
-                  src="../img/jubilee-austen-preview.png"
-                  alt="desc"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Jubilee Austen</h3>
-                  <span>HTML</span>
-                  <span>CSS</span>
-                  <p>
-                    Jubilee Austen is a portfolio for a fictional web developer.
-                    HTML and CSS was used to create a static website.
-                  </p>
-                </div>
-              </article>
-            </a>
+              </div>
+            </div>
+          </div>
+          <div class="pagination">
+            <a href="#" class="button"
+              ><i class="fas fa-chevron-left"></i> Prev</a
+            >
+            <a href="#" class="button"
+              >Next <i class="fas fa-chevron-right"></i
+            ></a>
           </div>
         </div>
       </section>
