--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Nexus - Work Detail</title>
+    <title>Rogue Pickings - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -47,7 +47,7 @@
       </p>
     <![endif]-->
 
-    <!-- HEADER - WORK DETAIL -->
+    <!-- HEADER - WORK OVERVIEW -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -69,11 +69,11 @@
       </div>
     </header>
 
-    <!-- MAIN - WORK DETAIL -->
+    <!-- MAIN - WORK OVERVIEW -->
     <main>
-      <section class="work-detail">
+      <section class="work-overview">
         <div class="content-wrapper">
-          <h1>Nexus</h1>
+          <h1>Rogue Pickings</h1>
           <div
             class="image-slides-outer"
             data-aos="zoom-in"
@@ -81,9 +81,9 @@
             data-aos-once="true"
           >
             <div class="image-slides-inner">
-              <img src="../img/nexus-pc.png" class="active" />
-              <img src="../img/nexus-tablet.png" />
-              <img src="../img/nexus-ipx.png" />
+              <img src="../img/rogue-pickings-pc.png" class="active" />
+              <img src="../img/rogue-pickings-tablet.png" />
+              <img src="../img/rogue-pickings-ipx.png" />
             </div>
             <div class="image-slides-buttons">
               <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
@@ -91,30 +91,30 @@
             </div>
           </div>
           <div
-            class="work-detail-text"
+            class="work-overview-text"
             data-aos="zoom-in"
             data-aos-duration="1200"
             data-aos-once="true"
             data-aos-anchor="top-top"
           >
-            <div class="work-detail-sub">
+            <div class="work-overview-sub">
               <h3>Description</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-                quasi dicta, illum cum praesentium, quia laboriosam repudiandae
-                necessitatibus perspiciatis.
+                Rogue Pickings is a website for an imaginary food truck company.
+                It features a responsive one-page website coded using HTML and
+                CSS.
               </p>
             </div>
-            <div class="work-detail-sub">
+            <div class="work-overview-sub">
               <h3>Completed</h3>
               <p>May 2020</p>
             </div>
-            <div class="work-detail-sub">
+            <div class="work-overview-sub">
               <h3>Tech</h3>
               <span>HTML</span>
               <span>CSS</span>
             </div>
-            <div class="work-detail-sub">
+            <div class="work-overview-sub">
               <div class="button-container">
                 <a href="#" class="button" id="button-full-width">Live Demo</a>
               </div>
