Add text and adjust paddings on about page

--- a/about/index.html
+++ b/about/index.html
@@ -69,18 +69,20 @@
         <div class="rounded-square-container">
           <div class="content-wrapper">
             <div class="about-text">
-              <h1>I'm Hanis</h1>
+              <h1>Hey, I'm Hanis.</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
-                ipsum commodi odio magni minus maxime, nemo iste unde
-                reprehenderit aut excepturi, aliquam sequi dolor eaque quo
-                deleniti esse? Doloribus, ut.
+                I’m a web designer and developer based in Malaysia. I’ve always
+                been fascinated by design in technology. I sought to teach
+                myself when I realized creating websites is the perfect
+                combination of these and I’ve since been hooked by the freedom
+                and creativity it allows.
               </p>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Laudantium officia pariatur temporibus expedita voluptates
-                libero debitis amet facilis, ut rem labore, necessitatibus
-                voluptatem quaerat ea beatae ab doloribus! Voluptas, reiciendis.
+                I love making websites that not only look stunning, but are also
+                engaging, fast, easy to use, widely accessible and
+                frustration-free. All these ensure you find success in your
+                business online, no matter your business needs. So if you have a
+                project you’d like to work on with me, let’s get talking!
               </p>
             </div>
             <div class="image-container">
