Update text and paddings on about page

--- a/about/index.html
+++ b/about/index.html
@@ -72,17 +72,19 @@
               <h1>Hey, I'm Hanis.</h1>
               <p>
                 I’m a web designer and developer based in Malaysia. I’ve always
-                been fascinated by design in technology. I sought to teach
-                myself when I realized creating websites is the perfect
-                combination of these and I’ve since been hooked by the freedom
-                and creativity it allows.
+                been fascinated by design and technology, but it wasn’t until
+                recently I realized I wanted to do something that combines the
+                both of these. So I sought to teach myself how to make websites
+                from scratch. I’ve since been hooked by the freedom and
+                creativity it allows.
               </p>
               <p>
-                I love making websites that not only look stunning, but are also
-                engaging, fast, easy to use, widely accessible and
-                frustration-free. All these ensure you find success in your
-                business online, no matter your business needs. So if you have a
-                project you’d like to work on with me, let’s get talking!
+                I love making websites that not only look beautiful, but are
+                also engaging, fast, easy to use and free from frustration. All
+                these ensure you find success in your business online, no matter
+                your business needs. So if you have a project you’d like to work
+                on with me,
+                <a href="mailto:hanisno@outlook.com">let’s get talking!</a>
               </p>
             </div>
             <div class="image-container">
