Add internal links for all pages and socials and adjust footer layout

--- a/about/index.html
+++ b/about/index.html
@@ -53,10 +53,9 @@
         </div>
         <nav id="menu-content">
           <ul>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="../about/">About</a></li>
+            <li><a href="../work/">Work</a></li>
+            <li><a href="../contact/">Contact</a></li>
           </ul>
         </nav>
         <div id="menu-bg"></div>
@@ -74,8 +73,8 @@
                 I’m a web designer and developer based in Malaysia. I’ve always
                 been fascinated by design and technology, but it wasn’t until
                 recently I realized I wanted to do something that combines the
-                both of these. So I sought to teach myself how to make websites
-                from scratch. I’ve since been hooked by the freedom and
+                both of these. So I one day sought to teach myself how to make
+                websites from scratch. I’ve since been hooked by the freedom and
                 creativity it allows.
               </p>
               <p>
