--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -59,10 +59,9 @@
         </div>
         <nav id="menu-content">
           <ul>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="../about/">About</a></li>
+            <li><a href="../work/">Work</a></li>
+            <li><a href="../contact/">Contact</a></li>
           </ul>
         </nav>
         <div id="menu-bg"></div>
@@ -137,46 +136,50 @@
       </section>
     </main>
 
-    <!-- FOOTER -->
     <footer>
       <div class="wrapper-container">
         <div class="footer-content">
-          <!-- NAVIGATION -->
-          <nav class="footer-navigation">
-            <ul>
-              <li><a href="contact/index.html">Contact</a></li>
-              <li><a href="work/index.html">Work</a></li>
-              <li><a href="about/index.html">About</a></li>
-              <li><a href="#">Resume</a></li>
-            </ul>
-          </nav>
-
           <!-- SOCIAL -->
-          <div class="social">
+          <div
+            class="social"
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-once="true"
+          >
             <div class="social-icons">
-              <p data-aos="slide-up" data-aos-duration="500">
-                <a href="https://www.facebook.com/" target="_blank">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </p>
-              <p
-                data-aos="slide-up"
-                data-aos-duration="500"
-                data-aos-delay="510"
-              >
-                <a href="https://www.twitter.com/" target="_blank">
+              <p>
+                <a href="https://twitter.com/hanisno" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p data-aos="slide-up" data-aos-duration="500">
-                <a href="https://www.instagram.com/" target="_blank">
-                  <i class="fab fa-instagram"></i>
+              <p>
+                <a href="https://github.com/hanisno" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </p>
+              <p>
+                <a href="https://www.linkedin.com/in/hanisno/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
                 </a>
               </p>
             </div>
             <!--social icons div ends -->
           </div>
-          <!-- social div ends -->
+          <!-- NAVIGATION -->
+          <nav
+            class="footer-navigation"
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-delay="500"
+            data-aos-once="true"
+          >
+            <ul>
+              <li><a href="../about/">About</a></li>
+              <li><a href="../work/">Work</a></li>
+              <li><a href="../contact/">Contact</a></li>
+            </ul>
+          </nav>
+          <!-- nav div ends -->
         </div>
         <!-- footer content div ends -->
       </div>
@@ -190,7 +193,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p><a href="./">Hanis</a> 2020</p>
+      <p><a href="/">Hanis</a> 2020</p>
       <img src="../img/waves-footer.svg" alt="" />
     </div>
 
