--- a/contact/index.html
+++ b/contact/index.html
@@ -59,10 +59,9 @@
         </div>
         <nav id="menu-content">
           <ul>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="../about/">About</a></li>
+            <li><a href="../work/">Work</a></li>
+            <li><a href="../contact/">Contact</a></li>
           </ul>
         </nav>
         <div id="menu-bg"></div>
@@ -89,18 +88,21 @@
               <div class="social">
                 <div class="social-icons">
                   <p data-aos="fade-right" data-aos-duration="1000">
-                    <a href="https://www.facebook.com/" target="_blank">
-                      <i class="fab fa-facebook-f"></i>
-                    </a>
-                  </p>
-                  <p data-aos="fade-in" data-aos-duration="1000">
-                    <a href="https://www.twitter.com/" target="_blank">
+                    <a href="https://twitter.com/hanisno" target="_blank">
                       <i class="fab fa-twitter"></i>
                     </a>
                   </p>
+                  <p data-aos="fade-in" data-aos-duration="1000">
+                    <a href="https://github.com/hanisno" target="_blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </p>
                   <p data-aos="fade-left" data-aos-duration="1000">
-                    <a href="https://www.instagram.com/" target="_blank">
-                      <i class="fab fa-instagram"></i>
+                    <a
+                      href="https://www.linkedin.com/in/hanisno/"
+                      target="_blank"
+                    >
+                      <i class="fab fa-linkedin-in"></i>
                     </a>
                   </p>
                 </div>
