--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
         </div>
         <nav id="menu-content">
           <ul>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="about/">About</a></li>
+            <li><a href="work/">Work</a></li>
+            <li><a href="contact/">Contact</a></li>
           </ul>
         </nav>
         <div id="menu-bg"></div>
@@ -140,7 +139,7 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="work/nexus-detail.html">
+            <a href="work/nexus-overview.html">
               <article>
                 <img
                   src="img/nexus-preview.png"
@@ -164,7 +163,7 @@
                 </div>
               </article>
             </a>
-            <a href="work/rogue-pickings-detail.html">
+            <a href="work/rogue-pickings-overview.html">
               <article id="article-b" data-aos-delay="300">
                 <img
                   src="img/rogue-pickings-preview.png"
@@ -188,7 +187,7 @@
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen-preview.html">
+            <a href="work/jubilee-austen-overview.html">
               <article data-aos-delay="500">
                 <img
                   src="img/jubilee-austen-preview.png"
@@ -212,7 +211,7 @@
               </article>
             </a>
             <div class="button-container">
-              <a href="#work" class="button">View more</a>
+              <a href="work/" class="button">View more</a>
             </div>
           </div>
         </div>
@@ -230,8 +229,8 @@
                 <p>
                   Whether building from ground-up or refreshing existing pages,
                   I can help write code that is lean and clean for you -
-                  optimized for fast loading, mobile-responsiveness and
-                  readability.
+                  optimized for mobile-responsiveness, fast loading and ease of
+                  use.
                 </p>
               </div>
             </article>
@@ -296,42 +295,47 @@
     <footer>
       <div class="wrapper-container">
         <div class="footer-content">
-          <!-- NAVIGATION -->
-          <nav class="footer-navigation">
-            <ul>
-              <li><a href="contact/index.html">Contact</a></li>
-              <li><a href="work/index.html">Work</a></li>
-              <li><a href="about/index.html">About</a></li>
-              <li><a href="#">Resume</a></li>
-            </ul>
-          </nav>
-
           <!-- SOCIAL -->
-          <div class="social">
+          <div
+            class="social"
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-once="true"
+          >
             <div class="social-icons">
-              <p data-aos="slide-up" data-aos-duration="500">
-                <a href="https://www.facebook.com/" target="_blank">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </p>
-              <p
-                data-aos="slide-up"
-                data-aos-duration="500"
-                data-aos-delay="510"
-              >
-                <a href="https://www.twitter.com/" target="_blank">
+              <p>
+                <a href="https://twitter.com/hanisno" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p data-aos="slide-up" data-aos-duration="500">
-                <a href="https://www.instagram.com/" target="_blank">
-                  <i class="fab fa-instagram"></i>
+              <p>
+                <a href="https://github.com/hanisno" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </p>
+              <p>
+                <a href="https://www.linkedin.com/in/hanisno/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
                 </a>
               </p>
             </div>
             <!--social icons div ends -->
           </div>
-          <!-- social div ends -->
+          <!-- NAVIGATION -->
+          <nav
+            class="footer-navigation"
+            data-aos="fade-up"
+            data-aos-duration="500"
+            data-aos-delay="500"
+            data-aos-once="true"
+          >
+            <ul>
+              <li><a href="about/">About</a></li>
+              <li><a href="work/">Work</a></li>
+              <li><a href="contact/">Contact</a></li>
+            </ul>
+          </nav>
+          <!-- nav div ends -->
         </div>
         <!-- footer content div ends -->
       </div>
@@ -345,7 +349,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p><a href="./">Hanis</a> 2020</p>
+      <p><a href="/">Hanis</a> 2020</p>
       <img src="img/waves-footer.svg" alt="" />
     </div>
 
