--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -108,11 +108,21 @@
             </div>
             <div class="work-overview-sub">
               <div class="button-container">
-                <a href="#" class="button" id="button-full-width">Live Demo</a>
+                <a
+                  href="https://hanisno.github.io/jubilee-austen/"
+                  target="_blank"
+                  class="button"
+                  id="button-full-width"
+                  >Live Demo</a
+                >
               </div>
               <div class="button-container">
-                <a href="#" class="button" id="button-full-width"
-                  >Github Code</a
+                <a
+                  href="https://github.com/hanisno/jubilee-austen"
+                  target="_blank"
+                  class="button"
+                  id="button-full-width"
+                  >Source Code</a
                 >
               </div>
             </div>
