Add pagination links on overview pages and fix menu links

--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
         </div>
         <nav id="menu-content">
           <ul>
-            <li><a href="../about/">About</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="../work/">Work</a></li>
             <li><a href="../contact/">Contact</a></li>
           </ul>
