--- a/work/nexus-overview.html
+++ b/work/nexus-overview.html
@@ -59,6 +59,7 @@
         </div>
         <nav id="menu-content">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="../about/">About</a></li>
             <li><a href="../work/">Work</a></li>
             <li><a href="../contact/">Contact</a></li>
@@ -135,10 +136,10 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="#" class="button"
+            <a href="jubilee-austen-overview.html" class="button"
               ><i class="fas fa-chevron-left"></i> Prev</a
             >
-            <a href="#" class="button"
+            <a href="rogue-pickings-overview.html" class="button"
               >Next <i class="fas fa-chevron-right"></i
             ></a>
           </div>
