--- a/contact/index.html
+++ b/contact/index.html
@@ -59,9 +59,9 @@
         </div>
         <nav id="menu-content">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="../about/">About</a></li>
             <li><a href="../work/">Work</a></li>
-            <li><a href="../contact/">Contact</a></li>
           </ul>
         </nav>
         <div id="menu-bg"></div>
