--- a/work/index.html
+++ b/work/index.html
@@ -59,8 +59,8 @@
         </div>
         <nav id="menu-content">
           <ul>
+            <li><a href="/">Home</a></li>
             <li><a href="../about/">About</a></li>
-            <li><a href="../work/">Work</a></li>
             <li><a href="../contact/">Contact</a></li>
           </ul>
         </nav>
