Adjust footer hover effects on all pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -87,24 +87,18 @@
               <h3>See what I'm up to</h3>
               <div class="social">
                 <div class="social-icons">
-                  <p data-aos="fade-right" data-aos-duration="1000">
-                    <a href="https://twitter.com/hanisno" target="_blank">
-                      <i class="fab fa-twitter"></i>
-                    </a>
-                  </p>
-                  <p data-aos="fade-in" data-aos-duration="1000">
-                    <a href="https://github.com/hanisno" target="_blank">
-                      <i class="fab fa-github"></i>
-                    </a>
-                  </p>
-                  <p data-aos="fade-left" data-aos-duration="1000">
-                    <a
-                      href="https://www.linkedin.com/in/hanisno/"
-                      target="_blank"
-                    >
-                      <i class="fab fa-linkedin-in"></i>
-                    </a>
-                  </p>
+                  <a href="https://twitter.com/hanisno" target="_blank">
+                    <p><i class="fab fa-twitter"></i></p>
+                  </a>
+                  <a href="https://github.com/hanisno" target="_blank">
+                    <p><i class="fab fa-github"></i></p>
+                  </a>
+                  <a
+                    href="https://www.linkedin.com/in/hanisno/"
+                    target="_blank"
+                  >
+                    <p><i class="fab fa-linkedin-in"></i></p>
+                  </a>
                 </div>
                 <!--social icons div ends -->
               </div>
