--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -151,21 +151,15 @@
             data-aos-once="true"
           >
             <div class="social-icons">
-              <p>
-                <a href="https://twitter.com/hanisno" target="_blank">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </p>
-              <p>
-                <a href="https://github.com/hanisno" target="_blank">
-                  <i class="fab fa-github"></i>
-                </a>
-              </p>
-              <p>
-                <a href="https://www.linkedin.com/in/hanisno/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </p>
+              <a href="https://twitter.com/hanisno" target="_blank">
+                <p><i class="fab fa-twitter"></i></p>
+              </a>
+              <a href="https://github.com/hanisno" target="_blank">
+                <p><i class="fab fa-github"></i></p>
+              </a>
+              <a href="https://www.linkedin.com/in/hanisno/" target="_blank">
+                <p><i class="fab fa-linkedin-in"></i></p>
+              </a>
             </div>
             <!--social icons div ends -->
           </div>
