Replace image with compressed ones and adjust socials animation on contact page

--- a/about/index.html
+++ b/about/index.html
@@ -87,7 +87,10 @@
               </p>
             </div>
             <div class="image-container">
-              <img src="../img/2.png" alt="A picture of me" />
+              <img
+                src="../img/portrait-illustration.png"
+                alt="Illustrated portrait"
+              />
             </div>
           </div>
         </div>
