--- a/contact/index.html
+++ b/contact/index.html
@@ -87,15 +87,27 @@
               <h3>See what I'm up to</h3>
               <div class="social">
                 <div class="social-icons">
-                  <a href="https://twitter.com/hanisno" target="_blank">
+                  <a
+                    href="https://twitter.com/hanisno"
+                    target="_blank"
+                    data-aos="fade-right"
+                    data-aos-duration="700"
+                  >
                     <p><i class="fab fa-twitter"></i></p>
                   </a>
-                  <a href="https://github.com/hanisno" target="_blank">
+                  <a
+                    href="https://github.com/hanisno"
+                    target="_blank"
+                    data-aos="fade-in"
+                    data-aos-duration="700"
+                  >
                     <p><i class="fab fa-github"></i></p>
                   </a>
                   <a
                     href="https://www.linkedin.com/in/hanisno/"
                     target="_blank"
+                    data-aos="fade-left"
+                    data-aos-duration="700"
                   >
                     <p><i class="fab fa-linkedin-in"></i></p>
                   </a>
