--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <article>
                 <img
                   src="img/nexus-preview.png"
-                  alt="desc"
+                  alt="Nexus website previews on desktop and phone browsers"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
@@ -167,7 +167,7 @@
               <article id="article-b" data-aos-delay="300">
                 <img
                   src="img/rogue-pickings-preview.png"
-                  alt="desc"
+                  alt="Rogue Pickings website previews on desktop and phone browsers"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -191,7 +191,7 @@
               <article data-aos-delay="500">
                 <img
                   src="img/jubilee-austen-preview.png"
-                  alt="desc"
+                  alt="Jubilee Austen website preview on desktop browser"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
