--- a/work/index.html
+++ b/work/index.html
@@ -78,7 +78,7 @@
               <article>
                 <img
                   src="../img/nexus-preview.png"
-                  alt="desc"
+                  alt="Nexus website previews on desktop and phone browsers"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
@@ -102,7 +102,7 @@
               <article id="article-b" data-aos-delay="300">
                 <img
                   src="../img/rogue-pickings-preview.png"
-                  alt="desc"
+                  alt="Rogue Pickings website previews on desktop and phone browsers"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -126,7 +126,7 @@
               <article data-aos-delay="500">
                 <img
                   src="../img/jubilee-austen-preview.png"
-                  alt="desc"
+                  alt="Jubilee Austen website preview on desktop browser"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
