--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -81,7 +81,11 @@
             data-aos-once="true"
           >
             <div class="image-slides-inner">
-              <img src="../img/jubilee-austen-preview.png" class="active" />
+              <img
+                src="../img/jubilee-austen-preview.png"
+                alt="Jubilee Austen website preview on desktop browser"
+                class="active"
+              />
             </div>
           </div>
           <div
