--- a/work/nexus-overview.html
+++ b/work/nexus-overview.html
@@ -81,9 +81,19 @@
             data-aos-once="true"
           >
             <div class="image-slides-inner">
-              <img src="../img/nexus-pc.png" class="active" />
-              <img src="../img/nexus-tablet.png" />
-              <img src="../img/nexus-ipx.png" />
+              <img
+                src="../img/nexus-pc.png"
+                alt="Nexus website preview on desktop browser"
+                class="active"
+              />
+              <img
+                src="../img/nexus-tablet.png"
+                alt="Nexus website preview on tablet browser"
+              />
+              <img
+                src="../img/nexus-ipx.png"
+                alt="Nexus website preview on iPhone X phone browser"
+              />
             </div>
             <div class="image-slides-buttons">
               <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
