--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -81,9 +81,19 @@
             data-aos-once="true"
           >
             <div class="image-slides-inner">
-              <img src="../img/rogue-pickings-pc.png" class="active" />
-              <img src="../img/rogue-pickings-tablet.png" />
-              <img src="../img/rogue-pickings-ipx.png" />
+              <img
+                src="../img/rogue-pickings-pc.png"
+                alt="Rogue Pickings website preview on desktop browser"
+                class="active"
+              />
+              <img
+                src="../img/rogue-pickings-tablet.png"
+                alt="Rogue Pickings website preview on tablet browser"
+              />
+              <img
+                src="../img/rogue-pickings-ipx.png"
+                alt="Rogue Pickings website preview on iPhone X browser"
+              />
             </div>
             <div class="image-slides-buttons">
               <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
