Clean up head and comments

--- a/contact/index.html
+++ b/contact/index.html
@@ -7,36 +7,22 @@
       name="description"
       content="How to contact Hanis Noor, a front-end web designer and developer"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Favicon -->
+    <meta name="theme-color" content="#deebfe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../icon.png" />
     <link rel="manifest" href="site.webmanifest" />
-
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- Icon library to show a hamburger menu (bars) on small screens -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
-    <!--Fontawesome kits-->
     <script
       src="https://kit.fontawesome.com/4e12b69c63.js"
       crossorigin="anonymous"
     ></script>
-
-    <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
@@ -47,8 +33,6 @@
         your experience and security.
       </p>
     <![endif]-->
-
-    <!-- HEADER - CONTACT -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -69,7 +53,6 @@
       </div>
     </header>
 
-    <!-- MAIN - CONTACT -->
     <main>
       <section class="contact" data-aos="zoom-in" data-aos-duration="1200">
         <div class="rounded-square-container">
@@ -83,7 +66,6 @@
               <h3>Feel like talking?</h3>
               <a href="tel:+601165522126">+601165522126</a>
             </div>
-            <!-- SOCIAL -->
             <div class="info-sub">
               <h3>See what I'm up to</h3>
               <div class="social">
@@ -113,16 +95,13 @@
                     <p><i class="fab fa-linkedin-in"></i></p>
                   </a>
                 </div>
-                <!--social icons div ends -->
               </div>
             </div>
-            <!-- social div ends -->
           </div>
         </div>
       </section>
     </main>
 
-    <!-- SCRIPTS -->
     <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
