--- a/index.html
+++ b/index.html
@@ -7,37 +7,22 @@
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Favicon -->
+    <meta name="theme-color" content="#deebfe;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="icon.png" />
     <link rel="manifest" href="site.webmanifest" />
-
-    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- Icon library to show a hamburger menu on small screens -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
-    <!--Fontawesome kits-->
     <script
       src="https://kit.fontawesome.com/4e12b69c63.js"
       crossorigin="anonymous"
     ></script>
-
-    <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
@@ -48,8 +33,6 @@
         your experience and security.
       </p>
     <![endif]-->
-
-    <!-- HEADER - NAVIGATION -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -70,9 +53,7 @@
       </div>
     </header>
 
-    <!-- MAIN - HOMEPAGE -->
     <main>
-      <!-- HERO -->
       <section class="hero">
         <div class="content-wrapper">
           <h1 data-aos="fade-in" data-aos-duration="600">Hey! I'm Hanis.</h1>
@@ -92,24 +73,20 @@
           </div>
         </div>
       </section>
-      <!-- SVG START -->
+
       <div class="parallaxfx">
-        <!-- left svg -->
         <img src="img/left-top.svg" alt="" class="svg-lt" />
         <img src="img/left-bottom.svg" alt="" class="svg-lb" />
         <img src="img/left-mid.svg" alt="" class="svg-lm" />
-        <!--right svg -->
         <img src="img/right-mid.svg" alt="" class="svg-rm" />
         <img src="img/right-top.svg" alt="" class="svg-rt" />
         <img src="img/right-bottom.svg" alt="" class="svg-rb" />
-        <!--speck svg -->
         <img src="img/e6.svg" alt="" class="svg-e6" />
         <img src="img/e7.svg" alt="" class="svg-e7" />
         <img src="img/e9.svg" alt="" class="svg-e9" />
         <img src="img/e10.svg" alt="" class="svg-e10" />
       </div>
-      <!-- SVG ENDS -->
-      <!-- INITIAL CALL TO ACTION -->
+
       <section class="initial-call-to-action">
         <div class="wrapper-container">
           <div class="content-wrapper">
@@ -137,7 +114,7 @@
           </div>
         </div>
       </section>
-      <!-- WORK -->
+
       <section class="work" id="work-section">
         <div class="wrapper-container">
           <h1>Work</h1>
@@ -220,7 +197,6 @@
         </div>
       </section>
 
-      <!-- WHAT I DO -->
       <section class="skills">
         <div class="wrapper-container">
           <h1>What I do</h1>
@@ -237,7 +213,6 @@
                 </p>
               </div>
             </article>
-
             <article
               data-aos="fade-up"
               data-aos-anchor-placement="center-bottom"
@@ -254,7 +229,6 @@
                 </p>
               </div>
             </article>
-
             <article
               data-aos="fade-up"
               data-aos-anchor-placement="center-bottom"
@@ -275,7 +249,6 @@
         </div>
       </section>
 
-      <!-- CALL TO ACTION-->
       <section class="call-to-action">
         <div class="rounded-square-container">
           <div class="content-wrapper">
@@ -294,11 +267,9 @@
       </section>
     </main>
 
-    <!-- FOOTER -->
     <footer>
       <div class="wrapper-container">
         <div class="footer-content">
-          <!-- SOCIAL -->
           <div
             class="social"
             data-aos="fade-up"
@@ -316,9 +287,7 @@
                 <p><i class="fab fa-linkedin-in"></i></p>
               </a>
             </div>
-            <!--social icons div ends -->
           </div>
-          <!-- NAVIGATION -->
           <nav
             class="footer-navigation"
             data-aos="fade-up"
@@ -332,14 +301,10 @@
               <li><a href="contact/">Contact</a></li>
             </ul>
           </nav>
-          <!-- nav div ends -->
         </div>
-        <!-- footer content div ends -->
       </div>
-      <!-- content wrapper div ends -->
     </footer>
 
-    <!-- LASTLY -->
     <div
       class="lastly"
       data-aos="slide-up"
@@ -350,7 +315,6 @@
       <img src="img/waves-footer.svg" alt="" />
     </div>
 
-    <!-- SCRIPTS -->
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
