--- a/work/jubilee-austen-overview.html
+++ b/work/jubilee-austen-overview.html
@@ -8,35 +8,21 @@
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Favicon -->
+    <meta name="theme-color" content="#deebfe" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../icon.png" />
     <link rel="manifest" href="site.webmanifest" />
-
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- Icon library to show a hamburger menu (bars) on small screens -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
-    <!--Fontawesome kits-->
     <script
       src="https://kit.fontawesome.com/4e12b69c63.js"
       crossorigin="anonymous"
     ></script>
-
-    <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
@@ -47,8 +33,6 @@
         your experience and security.
       </p>
     <![endif]-->
-
-    <!-- HEADER - WORK OVERVIEW -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -70,7 +54,6 @@
       </div>
     </header>
 
-    <!-- MAIN - WORK OVERVIEW -->
     <main>
       <section class="work-overview">
         <div class="content-wrapper">
@@ -148,7 +131,6 @@
     <footer>
       <div class="wrapper-container">
         <div class="footer-content">
-          <!-- SOCIAL -->
           <div
             class="social"
             data-aos="fade-up"
@@ -166,9 +148,7 @@
                 <p><i class="fab fa-linkedin-in"></i></p>
               </a>
             </div>
-            <!--social icons div ends -->
           </div>
-          <!-- NAVIGATION -->
           <nav
             class="footer-navigation"
             data-aos="fade-up"
@@ -182,14 +162,10 @@
               <li><a href="../contact/">Contact</a></li>
             </ul>
           </nav>
-          <!-- nav div ends -->
         </div>
-        <!-- footer content div ends -->
       </div>
-      <!-- content wrapper div ends -->
     </footer>
 
-    <!-- LASTLY -->
     <div
       class="lastly"
       data-aos="slide-up"
@@ -200,7 +176,6 @@
       <img src="../img/waves-footer.svg" alt="" />
     </div>
 
-    <!-- SCRIPTS -->
     <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
