--- a/about/index.html
+++ b/about/index.html
@@ -7,30 +7,18 @@
       name="description"
       content="About Hanis Noor, a front-end web designer and developer"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Favicon -->
+    <meta name="theme-color" content="#deebfe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
     <link rel="apple-touch-icon" href="../icon.png" />
     <link rel="manifest" href="site.webmanifest" />
-
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-
-    <!-- Icon library to show a hamburger menu (bars) on small screens -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-
-    <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
@@ -41,8 +29,6 @@
         your experience and security.
       </p>
     <![endif]-->
-
-    <!-- HEADER - ABOUT -->
     <header>
       <div id="menu-container">
         <div id="menu-toggle">
@@ -63,7 +49,6 @@
       </div>
     </header>
 
-    <!-- MAIN - ABOUT -->
     <main>
       <section class="about" data-aos="zoom-in" data-aos-duration="1200">
         <div class="rounded-square-container">
@@ -98,7 +83,6 @@
       </section>
     </main>
 
-    <!-- SCRIPTS -->
     <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
