--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               data-aos="zoom-in"
               data-aos-delay="1400"
               data-aos-duration="600"
+              data-aos-anchor-placement="top"
               >View work</a
             >
           </div>
@@ -91,8 +92,7 @@
         <div class="wrapper-container">
           <div class="content-wrapper">
             <h2 data-aos="fade-in" data-aos-duration="700">
-              A beautiful website engages a visitor and turns them into
-              customers.
+              A good website engages a visitor and turns them into customers.
             </h2>
             <div
               class="cta-highlight"
@@ -108,6 +108,7 @@
               data-aos="fade-in"
               data-aos-duration="800"
               data-aos-delay="1800"
+              data-aos-anchor-placement="top"
             >
               Continue scrolling to see what I can do.
             </h2>
